syntax = "proto3";

package blog;

option go_package = "go_grpc_blog/api/blog";

service BlogService {
  rpc GetPosts(GetPostsRequest) returns (GetPostsResponse) {}
  rpc CreatePost(CreatePostRequest) returns (CreatePostResponse) {}
  rpc UpdatePost(UpdatePostRequest) returns (UpdatePostResponse) {}
  rpc DeletePost(DeletePostRequest) returns (DeletePostResponse) {}
  rpc ToggleLike(ToggleLikeRequest) returns (ToggleLikeResponse) {}
}

message Post {
  string id = 1;
  string author_id = 2;
  string body = 3;
  string created_at = 4;
  int32 likes_count = 5;
  bool is_liked = 6;
}

message User {
  string id = 1;
  string nick_name = 2;
  string photo_url = 3;
}

message GetPostsRequest {
  int32 limit = 1;
  int32 offset = 2;
}

message GetPostsResponse {
  repeated Post posts = 1;
}

message CreatePostRequest {
  string body = 1;
}

message CreatePostResponse {
  Post post = 1;
}

message UpdatePostRequest {
  string id = 1;
  string body = 2;
}

message UpdatePostResponse {
  Post post = 1;
}

message DeletePostRequest {
  string id = 1;
}

message DeletePostResponse {
  bool success = 1;
}

message ToggleLikeRequest {
  string post_id = 1;
}

message ToggleLikeResponse {
  Post post = 1;
}